--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Ashley's Program
+		    WASD Movement (F for hyperspace)
 	    </footer>
 	</body>
 </html>
